# langchain-takehome

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLEANUP_RECOMMENDATIONS.md  COMPREHENSIVE_TEST_SUITE_SUMMARY.md  CONSOLIDATION_REVIEW.md  CONSOLIDATION_SUMMARY.md  CYCLE_DETECTION_ANALYSIS.md  DEMO_ACCOUNTS.md  Dockerfile  EVAL_GEMINI_KIMI.md  GOOGLE_OAUTH_FIX.md  LANGGRAPH_PITFALL_ANALYSIS.md  PERSISTENCE_FIXES_FINAL.md  PERSISTENCE_IMPROVEMENTS_SUMMARY.md  PERSISTENCE_RELIABILITY_REPORT.md  PRODUCTION_READY_SUMMARY.md  PRODUCTION_SETUP.md  PROMPT_FIXES.md  QUICKSTART.md  README.md  README_MERGED.md  README_SETUP.md  SUPABASE_DRIZZLE_SETUP.md  alembic.ini  check_langgraph_pitfalls.py  docker-compose.yml  drizzle.config.ts  evaluation_results_consolidated_20250721_115322.json  evaluation_results_consolidated_20250721_131328.json  evaluation_results_consolidated_20250721_132708.json  langgraph.json  main.py  main_api.py  package-lock.json  package.json  patch_sse.py  pyproject.toml  pytest.ini  (+21 more)
docs/: GOOGLE_OAUTH_SETUP.md  IMPROVED_IMPLEMENTATION.md  PROMPT_MANAGEMENT.md  README.md  api.md  architecture.md  caching.md  docker-compose-explanation.md  evaluation.md  extending.md  setup.md  troubleshooting.md  usage.md
evaluation/: BEST_PRACTICES.md  README.md  __init__.py  run_evaluation.py
examples/: streaming_demo.py
frontend/: .env.example  .gitignore  BACKEND_DEPLOYMENT_ANALYSIS.md  DATABASE_DEPLOYMENT.md  DEPLOYMENT.md  GOOGLE_OAUTH_SETUP.md  QUICKSTART.md  README.md  bun.build.cloudflare.ts  bun.build.ts  bun.dev.simple.ts  bun.dev.ts  create_demo_user.py  fix-imports.sh  index.html  package-lock.json  package.json  setup_database.py  tailwind.config.js  test_google_oauth.py  tsconfig.json  vite.config.ts  wrangler.toml
migrations/: env.py
scripts/: add_google_oauth.sql  create_demo_user.py  create_simple_demo_user.py  fix_google_oauth_schema.py  fix_prompt_config.py  init.sql  list_prompts.py  manage_prompts.py  prompt_manager.py  setup_auth_db.py  setup_database.py  setup_demo_tenant.py  verify_demo_user.py
src/: __init__.py  example.ts
tests/: README.md  __init__.py  conftest.py  test_config.py  test_graph_debug.py  (+4 more)
(+176 files in other folders)
